<?xml version="1.0" encoding="utf-8"?>
<!--
  RFID Access Control System
  Copyright (C) 2025 o-a-a-w

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminAuthActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/admin_auth_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_admin_code"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <!-- Replace the existing EditText with this LinearLayout of 6 digit boxes -->
    <LinearLayout
        android:id="@+id/pinCodeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etCode1"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCode2"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCode3"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCode4"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCode5"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCode6"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="20sp"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/invalid_code"
        android:textColor="@color/error_dark"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCode"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        android:backgroundTint="@color/error_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEnter"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/enter"
        android:backgroundTint="@color/success_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>