<?xml version="1.0" encoding="utf-8"?>
<!--
  RFID Access Control System
  Copyright (C) 2025 o-a-a-w

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rfid.RFIDScannerActivity">

    <TextView
        android:id="@+id/tvScanInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/scan_rfid"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Scanning Animation Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scanContainer"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Animated Scanning Circle -->
        <ImageView
            android:id="@+id/ivScanAnimation"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/scan_rfid"
            android:src="@drawable/scanning_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Center Cross/Plus -->
        <ImageView
            android:id="@+id/ivScanCross"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/scan_rfid"
            android:src="@drawable/ic_scan_cross"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvScanHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/place_tag_near_device"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanContainer" />

    <!-- Access Result Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAccessResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/accessResultContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp"
            android:background="@drawable/access_granted_bg">

            <!-- Circle with icon -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardResultIcon"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:cardCornerRadius="70dp"
                app:cardBackgroundColor="@color/success_dark"
                android:layout_marginBottom="24dp">

                <ImageView
                    android:id="@+id/ivAccessIcon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_checkmark"
                    android:tint="@color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAccessResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_granted"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/success_text"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvApartmentCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="Apartment: A103" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/return_home"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>